syntax = "proto3";

package cr8r.controller;

import "core/event.proto";

message PAddEventRequest {
    uint32 runner_id = 1;
    uint32 experiment_id = 2;
    core.PEvent event = 3;
}

message PAddEventReply {
    //
}

