syntax = "proto3";

package cr8r.services;

message PDownloadAttachmentRequest {
    uint32 id = 1;
}

message PDownloadAttachmentReply {
    message PBody {
        bytes body = 1;
    }

    oneof chunk {
        PBody body = 1;
    }
}